--- a/Scripts/SupplementalMaterial.Rmd
+++ b/Scripts/SupplementalMaterial.Rmd
@@ -1,9 +1,9 @@
----
-title: "Supplemental"
-output: html_document
----
+```{r setup}
+knitr::opts_knit$set(root.dir = '../processed_data')
+```
+
 ```{r}
-induce_exp <- read.table("~/Desktop/InducibleArchitectures/processed_data/induce_exp(updated).txt", header = T)
+induce_exp <- read.table("LacZ_variant_exp.txt", header = T)
 options(digits=3)
 
 induce_combo <- subset(induce_exp, grepl("COMBO", induce_exp$name)) %>% separate(col = 'name', into = c("Library", "Distal", "Min_35", "Min_10", "Proximal"), sep = "-", remove = F)
@@ -25,7 +25,7 @@ induce_multiple <- subset(induce_exp, grepl("MULTIPLE", induce_exp$name)) %>% se
 ```
 
 ```{r}
-# Figure S3: Barcode density graphs and replicate correlations
+# Figure S2: Barcode density graphs and replicate correlations
 # Histograms
 
 # COMBO LIBRARY
@@ -47,7 +47,7 @@ h1 <- induce_combo %>%
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
 
-# DISTAL LIBRARY
+# CORE LIBRARY
 med_barcode_unind <- median(filter(induce_exp, grepl("DISTAL", induce_exp$name))$avg_num_unind_bc)
 med_barcode_ind <- median(filter(induce_exp, grepl("DISTAL", induce_exp$name))$avg_num_ind_bc)
 h2 <- induce_distal %>%
@@ -85,6 +85,7 @@ h3 <- induce_multiple %>%
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16)) +
     annotate("text", x =20, y = 170, label = 'Median = 9', size = 7)
+
 # STERIC LIBRARY
 med_barcode_unind <- median(filter(induce_exp, grepl("STERIC", induce_exp$name))$avg_num_unind_bc)
 med_barcode_ind <- median(filter(induce_exp, grepl("STERIC", induce_exp$name))$avg_num_ind_bc)
@@ -124,6 +125,7 @@ c1a <- ggplot(induce_combo, aes(x = sum_RNA_exp_Induced_1, y = sum_RNA_exp_Induc
         axis.title.y.left = element_text(size = 20), 
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
+
 # NORMALIZED UNINDUCED
 c1b <- ggplot(induce_combo, aes(x = sum_RNA_exp_UnInduced_1, y = sum_RNA_exp_UnInduced_2)) + geom_point(alpha = .5, size = 3) +
   geom_smooth(method=lm, color = '#553C8B', se = FALSE) + annotate("text", x =.1, y = 10, label = paste('italic(r)==', signif(corr_UI, 3)),   parse = T, size = 8) + 
@@ -136,9 +138,10 @@ c1b <- ggplot(induce_combo, aes(x = sum_RNA_exp_UnInduced_1, y = sum_RNA_exp_UnI
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
 
-# DISTAL
+# CORE
 corr_I <- cor(induce_distal$sum_RNA_exp_Induced_1, induce_distal$sum_RNA_exp_Induced_2) #Pearson correlation
 corr_UI <- cor(induce_distal$sum_RNA_exp_UnInduced_1, induce_distal$sum_RNA_exp_UnInduced_2) #Pearson correlation
+
 # NORMALIZED INDUCED
 c2a <- ggplot(induce_distal, aes(x = sum_RNA_exp_Induced_1, y = sum_RNA_exp_Induced_2)) + geom_point(alpha = .5, size = 3) +
   geom_smooth(method=lm, color = '#553C8B', se = FALSE) + annotate("text", x =.1, y = 10, label = paste('italic(r)==', signif(corr_I, 3)),   parse = T, size = 8) + 
@@ -150,6 +153,7 @@ c2a <- ggplot(induce_distal, aes(x = sum_RNA_exp_Induced_1, y = sum_RNA_exp_Indu
         axis.title.y.left = element_text(size = 20), 
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
+
 # NORMALIZED UNINDUCED
 c2b <- ggplot(induce_distal, aes(x = sum_RNA_exp_UnInduced_1, y = sum_RNA_exp_UnInduced_2)) + geom_point(alpha = .5, size = 3) +
   geom_smooth(method=lm, color = '#553C8B', se = FALSE) + annotate("text", x =.1, y = 10, label = paste('italic(r)==', signif(corr_UI, 3)),   parse = T, size = 8) + 
@@ -176,6 +180,7 @@ c3a <- ggplot(induce_multiple, aes(x = sum_RNA_exp_Induced_1, y = sum_RNA_exp_In
       axis.title.y.left = element_text(size = 20),
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
+
 # NORMALIZED UNINDUCED
 c3b <- ggplot(induce_multiple, aes(x = sum_RNA_exp_UnInduced_1, y = sum_RNA_exp_UnInduced_2)) + geom_point(alpha = .5, size = 3) +
   geom_smooth(method=lm, color = '#553C8B', se = FALSE) + annotate("text", x =.1, y = 10, label = paste('italic(r)==', signif(corr_UI, 3)),   parse = T, size = 8) + 
@@ -203,6 +208,7 @@ c4a <- ggplot(induce_steric, aes(x = sum_RNA_exp_Induced_1, y = sum_RNA_exp_Indu
         axis.title.y.left = element_text(size = 20),
         axis.text.x = element_text(size = 16), 
         axis.text.y = element_text(size = 16))
+
 # NORMALIZED UNINDUCED
 c4b <- ggplot(induce_steric, aes(x = sum_RNA_exp_UnInduced_1, y = sum_RNA_exp_UnInduced_2)) + geom_point(alpha = .5, size = 3) +
   geom_smooth(method=lm, color = '#553C8B', se = FALSE) + annotate("text", x =.1, y = 4, label = paste('italic(r)==', signif(corr_UI, 3)),   parse = T, size = 8) + 
@@ -221,12 +227,12 @@ distal <- plot_grid(h2, c2a, c2b, ncol=3)
 multiple <- plot_grid(h3, c3a, c3b, ncol=3)
 steric <- plot_grid(h4, c4a, c4b, ncol=3)
 plot_grid(combo,multiple,distal,steric,ncol=1,labels='AUTO')
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS3.png', height = 16, width = 17)
+ggsave('../FigureSX/FigureS2.pdf', height = 16, width = 17)
 rm(h1, c1a, c1b, h3, c3a, c3b, h2, c2a, c2b, h4, c4a, c4b)
 ```
 
 ```{r}
-# Figure S4: Pcombo supplements
+# Figure S3: Pcombo supplements
 A <- induce_combo %>%
   filter(Proximal == 'lacOsym', Min_10 == 'minus10cons', Min_35 == 'minus35cons') %>%
   gather(Type, Expression, 'normalized_RNA_exp_Induced_12':'normalized_RNA_exp_UnInduced_12') %>%
@@ -265,11 +271,11 @@ B <- plot_grid(a1, a2)
 rm(a1,a2)
 
 plot_grid(A,B, labels='AUTO', ncol = 1)
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS4.pdf', height = 12, width = 16)
+ggsave('../FigureSX/FigureS3.pdf', height = 12, width = 16)
 ```
 
 ```{r}
-# Figure S6: Pmultiple supplement - Induced/Uninduced comparison with Pcombo heatmap
+# Figure S5: Pmultiple supplement - Induced/Uninduced comparison with Pcombo heatmap
 temp <- induce_combo
 colnames(temp)[colnames(temp) == "Distal"] <- "Distal_right"
 combo_multiple_comp <- left_join(temp, induce_multiple, by = c("Distal_right", 'Min_10', "Min_35", "Proximal"))
@@ -378,26 +384,11 @@ geom_text(aes(label=signif(ratio, 3)), size=5) +
 C <- plot_grid(FC2, FC1)
 
 plot_grid(A,B,C, ncol = 1, labels = 'AUTO', label_size = 20, rel_widths = c(1, 1))
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS6.pdf', width = 15.5, height = 15)
+ggsave('../FigureSX/FigureS5.pdf', width = 15.5, height = 15)
 ```
 
 ```{r}
-# Figure S7: Pspacer Supp
-#distal_scram_exp <- filter(induce_distal, Core == 'lacOscram', Distal == 'lacOscram', Min_10 == 'minus10cons', Min_35 == 'minus35cons') %>% dplyr::select(Offset, ratio)
-#distal_comp <- left_join(induce_distal, distal_scram_exp, by = 'Offset') %>%
-  #filter(Min_10 == 'minus10cons', Min_35 == 'minus35cons')
-  #dplyr::mutate(norm_ratio = ratio.x/ratio.y) %>%
-  #dplyr::select(Library, Core, Distal, Offset, norm_ratio) %>%
-  #unique(.)
-
-#distal_comp <- distal_comp[!is.na(distal_comp$norm_ratio),]
-#distal_comp$Distal <- factor(distal_comp$Distal, levels = c('lacOscram','lacO3','lacO2','lacO1','lacOsym'))
-#distal_comp[,'Distal'] <- sapply(distal_comp[,'Distal'],as.character) 
-
-#distal_comp <- distal_comp %>%
-#  mutate(realOffset = as.numeric(Offset) + 26) 
-#distal_comp$Core[distal_comp$Core == "lacO2"] <- "lacO2-var"
-#distal_comp$Distal[distal_comp$Distal == "lacO2"] <- "lacO2-var"
+# Figure S6: Pspacer Supp
 
 induce_distal <- induce_distal %>%
   mutate(realOffset = as.numeric(Offset) + 26) 
@@ -454,11 +445,12 @@ ggplot(aes(x = Min_10, y = Min_35)) +
   labs(x = '-10 Element', y = '-35 Element')
 
 plot_grid(A,B,C, ncol = 1, labels = 'AUTO', label_size = 20) 
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS7.pdf', width = 13, height = 22)
- ```
+ggsave('../FigureSX/FigureS6.pdf', width = 13, height = 22)
+```
 
 ```{r}
-# Psteric supplement - Although weak, if any, transcription was detected from promoters with only a -10, we found that relatively strong promoters could be created by the addition of an UP-element and extended -10 
+# Figure S7: Psteric supplement - Although weak, if any, transcription was detected from promoters with only a -10, we found that relatively strong promoters could be created by the addition of an UP-element and extended -10 
+
 up_326x_ext_10 <- filter(induce_steric, Loop_Distance == 55, UP == 'up_326x', Extended_Min_10 == 'ext_min10') %>% mutate(category = 'up_326x_ext_10') 
 up_326x_ext_UV5 <- filter(induce_steric, Loop_Distance == 55, UP == 'up_326x', Extended_Min_10 == 'ext_UV5') %>% mutate(category = 'up_326x_ext_UV5')
 no_up_ext_10 <- filter(induce_steric, Loop_Distance == 55, UP == 'no_up', Extended_Min_10 == 'ext_min10') %>% mutate(category = 'no_up_ext_10')
@@ -514,18 +506,98 @@ C <- induce_steric %>%
         axis.title.y.left = element_text(size = 22),
         legend.position = 'none')
 
-#table_var <- induce_steric %>%
-#  filter(UP == 'up_326x', Min_10 == 'minus10cons', Extended_Min_10 == 'ext_min10', Loop_Distance == 55, Proximal == 'lacO1') %>%
-#  select(name, variant, normalized_RNA_exp_Induced_12)
-#write.table(table_var, '~/Desktop/InducibleArchitectures/processed_data/Psteric_suppTable.txt')
 plot_grid(A,B,C,labels='AUTO', ncol = 3, label_size = 20)
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS8.pdf', width = 18, height = 7)
+ggsave('../FigureSX/FigureS7.pdf', width = 18, height = 7)
 
 ```
 
 ```{r}
-# Plate reader supplement with titration profiles of selected promoters
-titration <- read.table("~/Desktop/InducibleArchitectures/raw_data/titration.txt", header = T, fill = TRUE)
+# Figure S8: Correlations between RNAseq and Flow
+comp <- read.table('../raw_data/newFlowComparison.txt', header = TRUE)
+options(digits=3)
+
+pearsonFC <- cor(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")
+pearsonI <- cor(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")
+pearsonUI <- cor(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")
+
+spearFC <- cor(comp$RNAseq_FC, comp$Flow_FC, method = c("spearman"))
+spearI <- cor(comp$RNAseq_Induced, comp$Flow_Induced, method = c("spearman"))
+spearUI <- cor(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = c("spearman"))
+
+# FC
+cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")$estimate # 0.885
+cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")$p.value # 0.00153
+
+# Induced
+cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")$estimate # 0.701
+cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")$p.value # 0.0352
+
+# Uninduced
+cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")$estimate # 0.981
+cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")$p.value # 3.34e-06
+
+# FC
+cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "spearman")$estimate # 0.533
+cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "spearman")$p.value # 0.148
+
+# Induced
+cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "spearman")$estimate # 0.6
+cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "spearman")$p.value # 0.0968
+
+# Uninduced
+cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "spearman")$estimate # 0.65
+cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "spearman")$p.value # 0.0666
+
+library_comp <- comp %>%
+  mutate(Library = ifelse(grepl('Constitutive', comp$Name), 'Constitutive',
+                   ifelse(grepl('D', comp$Name), 'D',
+                   ifelse(grepl('M', comp$Name), 'M',
+                   ifelse(grepl('S', comp$Name), 'S', 'C')))))
+
+library_comp$Library <- factor(library_comp$Library, levels = c("C", "D", "M", "S", "Constitutive"))
+f <- library_comp %>%
+  ggplot(aes(x = RNAseq_FC, y = Flow_FC)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
+  geom_point(aes(color=Library), size = 5) +
+  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
+  labs(x = 'RNA-seq Fold-change', y = 'Flow Cytometry Fold-change') +
+  annotate("text", x =3, y = 22, label = paste('r==', pearsonFC),   parse = T, size = 5) +
+  annotate("text", x =3, y = 19, label = paste('rho==', spearFC),   parse = T, size = 5) +
+    theme(axis.text.x = element_text(size = 20), 
+        axis.text.y = element_text(size = 20),
+        axis.title.x.bottom = element_text(size = 16),
+        axis.title.y.left = element_text(size = 16))
+
+a <- library_comp %>%
+  ggplot(aes(x = RNAseq_Induced, y = Flow_Induced)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
+  geom_point(aes(color=Library), size = 5) +
+  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
+  labs(x = 'RNA-seq Induced Expression', y = 'Flow Cytometry Induced Expression') +
+  annotate("text", x =10, y = 950, label = paste('r==', pearsonI),   parse = T, size = 5) +
+  annotate("text", x =10, y = 850, label = paste('rho==', spearI),   parse = T, size = 5) +
+      theme(axis.text.x = element_text(size = 20), 
+        axis.text.y = element_text(size = 20),
+        axis.title.x.bottom = element_text(size = 16),
+        axis.title.y.left = element_text(size = 16))
+
+b <- library_comp %>%
+  ggplot(aes(x = RNAseq_Uninduced, y = Flow_Uninduced)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
+  geom_point(aes(color=Library), size = 5) +
+  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
+  labs(x = 'RNA-seq Uninduced Expression', y = 'Flow Cytometry Uninduced Expression') +
+  annotate("text", x =3, y = 640, label = paste('r==', pearsonUI),   parse = T, size = 5) +
+  annotate("text", x =3, y = 540, label = paste('rho==', spearUI),   parse = T, size = 5) +
+      theme(axis.text.x = element_text(size = 20), 
+        axis.text.y = element_text(size = 20),
+        axis.title.x.bottom = element_text(size = 16),
+        axis.title.y.left = element_text(size = 16))
+
+plot_grid(f,a,b, ncol=3, labels = 'AUTO')
+ggsave('../FigureSX/FigureS8.pdf', height = 5, width = 18)
+```
+
+```{r}
+# Figure S9: Plate reader supplement with titration profiles of selected promoters
+titration <- read.table("../raw_data/titration.txt", header = T, fill = TRUE)
 
 # COMBO
 uninduced <- titration %>% filter(Concentration == '1e-04') %>% mutate(background = 514.76*OD + 40.378) %>%
@@ -647,190 +719,5 @@ tit4 <- titration %>%
          legend.text = element_text(size = 15))
 
 plot_grid(tit1, tit2, tit3, tit4, ncol = 2)
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS9.pdf', height = 6, width = 9)
+ggsave('../FigureSX/FigureS9.pdf', height = 6, width = 9)
 ```
-
-
-
-
-
-```{r}
-# Figure S10: Correlations between RNAseq and Flow
-comp <- read.table('~/Desktop/newFlowComparison.txt', header = TRUE)
-options(digits=3)
-
-pearsonFC <- cor(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")
-pearsonI <- cor(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")
-pearsonUI <- cor(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")
-
-spearFC <- cor(comp$RNAseq_FC, comp$Flow_FC, method = c("spearman"))
-spearI <- cor(comp$RNAseq_Induced, comp$Flow_Induced, method = c("spearman"))
-spearUI <- cor(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = c("spearman"))
-
-# FC
-cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")$estimate # 0.885
-cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "pearson")$p.value # 0.00153
-
-# Induced
-cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")$estimate # 0.701
-cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "pearson")$p.value # 0.0352
-
-# Uninduced
-cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")$estimate # 0.981
-cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "pearson")$p.value # 3.34e-06
-
-# FC
-cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "spearman")$estimate # 0.533
-cor.test(comp$RNAseq_FC, comp$Flow_FC, method = "spearman")$p.value # 0.148
-
-# Induced
-cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "spearman")$estimate # 0.6
-cor.test(comp$RNAseq_Induced, comp$Flow_Induced, method = "spearman")$p.value # 0.0968
-
-# Uninduced
-cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "spearman")$estimate # 0.65
-cor.test(comp$RNAseq_Uninduced, comp$Flow_Uninduced, method = "spearman")$p.value # 0.0666
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-library_comp <- comp %>%
-  mutate(Library = ifelse(grepl('Constitutive', comp$Name), 'Constitutive',
-                   ifelse(grepl('D', comp$Name), 'D',
-                   ifelse(grepl('M', comp$Name), 'M',
-                   ifelse(grepl('S', comp$Name), 'S', 'C')))))
-
-library_comp$Library <- factor(library_comp$Library, levels = c("C", "D", "M", "S", "Constitutive"))
-f <- library_comp %>%
-  ggplot(aes(x = RNAseq_FC, y = Flow_FC)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
-  geom_point(aes(color=Library), size = 5) +
-  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
-  labs(x = 'RNA-seq Fold-change', y = 'Flow Cytometry Fold-change') +
-  annotate("text", x =3, y = 22, label = paste('r==', pearsonFC),   parse = T, size = 5) +
-  annotate("text", x =3, y = 19, label = paste('rho==', spearFC),   parse = T, size = 5) +
-    theme(axis.text.x = element_text(size = 20), 
-        axis.text.y = element_text(size = 20),
-        axis.title.x.bottom = element_text(size = 16),
-        axis.title.y.left = element_text(size = 16))
-
-a <- library_comp %>%
-  ggplot(aes(x = RNAseq_Induced, y = Flow_Induced)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
-  geom_point(aes(color=Library), size = 5) +
-  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
-  labs(x = 'RNA-seq Induced Expression', y = 'Flow Cytometry Induced Expression') +
-  annotate("text", x =10, y = 950, label = paste('r==', pearsonI),   parse = T, size = 5) +
-  annotate("text", x =10, y = 850, label = paste('rho==', spearI),   parse = T, size = 5) +
-      theme(axis.text.x = element_text(size = 20), 
-        axis.text.y = element_text(size = 20),
-        axis.title.x.bottom = element_text(size = 16),
-        axis.title.y.left = element_text(size = 16))
-
-  
-b <- library_comp %>%
-  ggplot(aes(x = RNAseq_Uninduced, y = Flow_Uninduced)) + geom_smooth(method=lm, color = 'black', se = TRUE) +
-  geom_point(aes(color=Library), size = 5) +
-  scale_color_manual(values = c('#76af51', '#3b9bb3', '#e39225', '#c13a41', 'black')) +
-  labs(x = 'RNA-seq Uninduced Expression', y = 'Flow Cytometry Uninduced Expression') +
-  annotate("text", x =3, y = 640, label = paste('r==', pearsonUI),   parse = T, size = 5) +
-  annotate("text", x =3, y = 540, label = paste('rho==', spearUI),   parse = T, size = 5) +
-      theme(axis.text.x = element_text(size = 20), 
-        axis.text.y = element_text(size = 20),
-        axis.title.x.bottom = element_text(size = 16),
-        axis.title.y.left = element_text(size = 16))
-
-plot_grid(f,a,b, ncol=3, labels = 'AUTO')
-ggsave('~/Desktop/InducibleArchitectures/FigureSX/FigureS10.pdf', height = 5, width = 18)
-```
-
-```{r}
-induce_multiple %>% 
-  filter(Min_10 == 'minus10cons' & Min_35 == 'minus35cons') %>%
-  filter(Proximal == 'lacOsym' | Proximal == 'lacO1') %>%
-  group_by(Distal_right, Distal_left) %>%
-  mutate(avgFC = mean(ratio)) %>%
-  select(Distal_right, Distal_left, Proximal, avgFC) %>%
-  ggplot(., aes(x = Distal_right, y = Distal_left)) + geom_tile(aes(fill = avgFC), color = 'black', size = 0.25, alpha = 1) + theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 15), axis.text.y = element_text(size = 15)) +
-  #scale_fill_distiller(palette = 'PuRd', na.value = 'gray20', name = 'Change in Fold-change') +
-  scale_fill_viridis(option = 'viridis') +
-  #scale_fill_gradient2(low = "yellow", mid = "black", high = "purple", midpoint = 0) +
-  scale_x_discrete(limits = c("lacOscram", "lacO3", 'lacO2', 'lacO1', 'lacOsym')) + scale_y_discrete(limits = c("lacOscram", "lacO3", 'lacO2', 'lacO1', 'lacOsym')) + labs(x = 'Canonical Distal', y = 'Additional Distal', size = 20) +
-geom_text(aes(label=signif(avgFC, 3)), size=5) +
-  theme(axis.text = element_text(size = 20),
-         axis.title = element_text(size = 20),
-         title = element_text(size = 24),
-         legend.text = element_text(size = 20))
-
-
-
-
-```
-
-
-```{r}
-nrow(induce_combo) 
-nrow(induce_distal)  
-nrow(induce_multiple)
-nrow(induce_steric)
-```
-
-```{r}
-induce_steric %>%
-  filter(Min_10 == 'minus10cons') %>%
-  ggplot(aes(x = UP, y = normalized_RNA_exp_Induced_12)) + geom_boxplot(outlier.shape = NA) + 
-  geom_jitter(aes(color = UP), size = 2.5, alpha = 0.6) +
-  scale_color_viridis(discrete = TRUE) +
-  scale_x_discrete(limits = c('no_up', 'up_69x', 'up_136x', 'up_326x'))
-```
-
-```{r}
-induce_multiple %>%
-  filter(Min_10 == 'minus10cons', Min_35 == 'minus35cons') %>%
-  ggplot(aes(x = Proximal, y = ratio)) + geom_bar(aes(fill = Proximal), position = 'dodge', stat = 'identity', alpha = 1, color = 'black') + scale_fill_viridis(discrete = TRUE) + scale_x_discrete(limits = c("lacOscram", "lacO2", "lacO3", "lacO1", "lacOsym")) + facet_wrap(~Distal_left+Distal_right, scales = 'fixed')
-
-
-
-induce_multiple$Distal_right = factor(induce_multiple$Distal_right, levels=c('lacOscram','lacO2','lacO3','lacO1', 'lacOsym'))
-induce_multiple$Distal_left = factor(induce_multiple$Distal_left, levels=c('lacOsym','lacO1','lacO3','lacO2', 'lacOscram'))
-induce_multiple$Proximal = factor(induce_multiple$Proximal, levels=c('lacOscram','lacO3','lacO2','lacO1', 'lacOsym'))
-
-induce_multiple %>%
-  filter(Min_10 == 'minus10cons' & Min_35 == 'minus35cons') %>%
-  ggplot(aes(x = Proximal, y = 'x')) + 
-  #geom_bar(aes(fill = Proximal), position = 'dodge', stat = 'identity', alpha = 1, color = 'black') +
-  geom_tile(aes(fill = log2(ratio)), alpha = 1, size = 0.5, color = 'gray20') + 
-  scale_x_discrete(limits = c("lacOscram", "lacO2", "lacO3", "lacO1", "lacOsym")) +
-  scale_fill_viridis() +
-  facet_grid(Distal_left ~ Distal_right)
-  
-  
-  
-  theme(panel.background = element_rect(fill = "gray40"), 
-        axis.ticks = element_blank(), 
-        axis.text.y = element_blank(), 
-        axis.text.x = element_blank(), 
-        strip.text = element_blank(),
-        panel.spacing = unit(0.10, "lines"))
-
-
-
-```
-
-
-
-
-
-
-
-
-
-
